# Desurium

./: .gitignore  .travis.yml  CMakeLists.txt
cmake/modules/: BuildBoost.cmake  BuildCEF.cmake  Buildv8.cmake  BuildwxWidgets.cmake  CheckOptions.cmake  SetInstallPaths.cmake
cmake/patches/: cef.patch  cef_gyp.patch
cmake/platform/unix/compiler/: GNU.cmake
cmake/scripts/: run.sh
distro/gentoo/portage/games-util/desurium/: Manifest  desurium-9999.ebuild
src/: CMakeLists.txt
src/branding_desura/: branding.cmake
src/branding_desurium/: branding.cmake
src/common/: CMakeLists.txt
src/common/service_pipe/: IPCServiceMain.cpp  IPCServiceMain.h
src/data/: CMakeLists.txt  run.sh
src/executable/bootloader_lin/: CMakeLists.txt
src/executable/bootloader_lin/code/: DesuraMain.cpp  DesuraMain.h
src/executable/bootloader_win/: CMakeLists.txt
src/executable/bootloader_win/code/: DesuraMain.cpp
src/executable/desura_browserhost/: CMakeLists.txt
src/executable/desura_browserhost/code/: HostMain.cpp
src/executable/service_win/: CMakeLists.txt
src/executable/service_win/code/: ServiceMain.cpp  ServiceMain.h  main.cpp
src/executable/toolhelper/: CMakeLists.txt
src/executable/toolhelper/code/: main.cpp
src/executable/utilhelper/: CMakeLists.txt
src/executable/utilhelper/code/: main.cpp
src/include/: ServiceCoreI.h  StackDumper.h
src/include/util/: UtilOs.h
src/shared/cef_desura/: CMakeLists.txt
src/shared/cef_desura/code/: ChromiumBrowser.cpp
src/shared/overlay/: CMakeLists.txt
src/shared/overlay/code/: OverlayMain.cpp  OverlayMain.h
src/shared/servicecore/: CMakeLists.txt
src/shared/servicecore/code/: ServiceCore.cpp  ServiceCore.h
src/shared/stackdumper/: CMakeLists.txt
src/shared/stackdumper/code/: StackDumper.cpp  StackDumper_linux.cpp  StackDumper_win.cpp
src/shared/uicore/: CMakeLists.txt
src/shared/uicore/code/: BreadCrumb.cpp  UICoreEntry.cpp
src/shared/usercore/: CMakeLists.txt
src/shared/usercore/code/: ToolInfo.cpp  ToolInfo.h  UserIPCPipeClient.cpp
src/shared/utilcore/: CMakeLists.txt
src/static/managers/code/: Managers.cpp
src/static/scriptengine/: CMakeLists.txt
src/static/util/: CMakeLists.txt
